--- a/helmfiles/home-automation/values/esphome/common.yaml
+++ b/helmfiles/home-automation/values/esphome/common.yaml
@@ -35,6 +35,6 @@ resources:
 
 persistence:
   enabled: true
-  storageClass: ceph
+  storageClass: nas-nfs
   accessMode: ReadWriteMany
   size: 8Gi
