--- a/helmfiles/media/values/filebrowser/common.yaml
+++ b/helmfiles/media/values/filebrowser/common.yaml
@@ -36,7 +36,7 @@ podSecurityContext:
 persistence:
   config:
     enabled: true
-    storageClass: ceph
+    storageClass: nas-nfs
     type: pvc
     size: 1Gi
   media:
