--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -29,8 +29,8 @@ podSecurityContext:
 
 resources:
   limits:
-    cpu: "1"
-    # memory: 512Mi
+    cpu: 500m
+    memory: 512Mi
   requests:
     cpu: 100m
     memory: 128Mi
