--- a/helmfiles/media/values/sonarr/common.yaml
+++ b/helmfiles/media/values/sonarr/common.yaml
@@ -14,6 +14,16 @@ ingress:
       hosts:
         - sonarr.szymonrichert.pl
 
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: nas
+          operator: In
+          values:
+          - "true"
+
 podAnnotations:
   oauth2-proxy-admission/secret-name: sonarr-proxy
   oauth2-proxy-admission/secret-namespace: media
@@ -29,8 +39,10 @@ resources:
 persistence:
   config:
     enabled: true
-    type: hostPath
-    hostPath: /var/lib/sonarr
+    accessMode: ReadWriteMany
+    storageClass: nas-nfs
+    size: 8Gi
+    annotations: {}
   media:
     enabled: true
     type: hostPath
