feat: Update NAS based releases to use hostPath

--- a/helmfiles/media/values/filebrowser/common.yaml
+++ b/helmfiles/media/values/filebrowser/common.yaml
@@ -46,9 +46,8 @@ podSecurityContext:
 persistence:
   config:
     enabled: true
-    storageClass: nas-nfs
-    type: pvc
-    size: 1Gi
+    type: hostPath
+    hostPath: /var/lib/filebrowser
   media:
     enabled: true
     type: hostPath
