--- a/helmfiles/media/values/jellyfin/common.yaml
+++ b/helmfiles/media/values/jellyfin/common.yaml
@@ -52,10 +52,8 @@ resources:
 persistence:
   config:
     enabled: true
-    accessMode: ReadWriteMany
-    storageClass: nas-nfs
-    size: 8Gi
-    annotations: {}
+    type: hostPath
+    hostPath: /var/lib/jellyfin
   media:
     enabled: true
     type: hostPath
