--- a/helmfiles/media/values/jellyseerr/raw/jellyseer.common.post.yaml
+++ b/helmfiles/media/values/jellyseerr/raw/jellyseer.common.post.yaml
@@ -4,7 +4,7 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: jellyseer-jellyseerr-restart
+  name: jellyseerr-restart
   namespace: media
 ---
 # allow getting status and patching only the one deployment you want
@@ -12,7 +12,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: jellyseer-jellyseerr-restart
+  name: jellyseerr-restart
   namespace: media
 rules:
   - apiGroups: ["apps", "extensions"]
@@ -25,21 +25,21 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: jellyseer-jellyseerr-restart
+  name: jellyseerr-restart
   namespace: media
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: jellyseer-jellyseerr-restart
+  name: jellyseerr-restart
 subjects:
   - kind: ServiceAccount
-    name: jellyseer-jellyseerr-restart
+    name: jellyseerr-restart
     namespace: media
 ---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: jellyseer-jellyseerr-restart
+  name: jellyseerr-restart
   namespace: media
 spec:
   concurrencyPolicy: Forbid
@@ -53,7 +53,7 @@ spec:
                                  # "waiting for rollout" variant specified below
       template:
         spec:
-          serviceAccountName: jellyseer-jellyseerr-restart # name of the service
+          serviceAccountName: jellyseerr-restart # name of the service
                                                  # account configured above
           restartPolicy: Never
           containers:
