--- a/helmfiles/media/values/prowlarr/common.yaml
+++ b/helmfiles/media/values/prowlarr/common.yaml
@@ -29,7 +29,5 @@ resources:
 persistence:
   config:
     enabled: true
-    accessMode: ReadWriteMany
-    storageClass: nas-nfs
-    size: 8Gi
-    annotations: {}
+    type: hostPath
+    hostPath: /var/lib/prowlarr
