--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -48,10 +48,8 @@ resources:
 persistence:
   config:
     enabled: true
-    accessMode: ReadWriteMany
-    storageClass: nas-nfs
-    size: 8Gi
-    annotations: {}
+    type: hostPath
+    hostPath: /var/lib/qbittorrent
   media:
     enabled: true
     type: hostPath
