--- a/helmfiles/media/values/sonarr/common.yaml
+++ b/helmfiles/media/values/sonarr/common.yaml
@@ -39,10 +39,8 @@ resources:
 persistence:
   config:
     enabled: true
-    accessMode: ReadWriteMany
-    storageClass: nas-nfs
-    size: 8Gi
-    annotations: {}
+    type: hostPath
+    hostPath: /var/lib/sonarr
   media:
     enabled: true
     type: hostPath
