feat: Add oauth2proxy for local octoprint

--- a/helmfiles/home-automation/helmfile.yaml
+++ b/helmfiles/home-automation/helmfile.yaml
@@ -56,3 +56,12 @@ releases:
     purpose: home-automation
     application: home-assistant
   <<: *default
+
+- name: octoprint-external
+  chart: oci://ghcr.io/szymonrychu/helm-charts/oauth2proxy-external
+  version: 0.0.1
+  namespace: home-automation
+  labels:
+    purpose: home-automation
+    application: octoprint-external
+  <<: *default
