--- a/helmfiles/storage/helmfile.yaml
+++ b/helmfiles/storage/helmfile.yaml
@@ -3,6 +3,8 @@ repositories:
   url: https://charts.helm.sh/stable
 - name: rook-release
   url: https://charts.rook.io/release
+- name: nfs-subdir-external-provisioner
+  url: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
 templates:
   default: &default
     wait: true
