feat: Update octoprint maxbody size to 500m

--- a/helmfiles/home-automation/values/octoprint-external/common.yaml
+++ b/helmfiles/home-automation/values/octoprint-external/common.yaml
@@ -3,6 +3,7 @@ ingress:
   className: nginx
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
     kubernetes.io/tls-acme: "true"
   hosts:
     - host: octoprint.szymonrichert.pl
