fix: Update restart cronjobs for jellyfin and jellyseer

--- a/helmfiles/media/values/jellyfin/raw/jellyseer.common.post.yaml
+++ b/helmfiles/media/values/jellyfin/raw/jellyseer.common.post.yaml
@@ -33,7 +33,7 @@ roleRef:
   name: jellyfin-restart
 subjects:
   - kind: ServiceAccount
-    name: jellyfin
+    name: jellyfin-restart
     namespace: media
 ---
 apiVersion: batch/v1
