feat: Add helmfile aware pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ terraform/**/terraform.tfstate
 terraform/**/terraform.tfstate.backup
 terraform/**/.terraform.lock.hcl
 terraform/**/terraform.tfvars
+.sub.gitlab-ci.yml
